--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mysql://root:1506@127.0.0.1:3306/pure_inka_foods?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="mysql://root:1506@127.0.0.1:3306/pureinkafoods?serverVersion=8.0&charset=utf8mb4"
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
