--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,5 +16,12 @@ services:
     App\:
         resource: '../src/'
 
+    # Configurar el listener para el procesamiento de imágenes
+    App\EventListener\ProductImageListener:
+        arguments:
+            $uploadDir: '%kernel.project_dir%/public/uploads/products/'
+        tags:
+            - { name: kernel.event_subscriber }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
